# DES_Head-Unit

./: .gitignore  .gitmodules  INSTALL.md  README.md  buildenv.sh  yocto.sh
HeadUnit/: BluetoothManager.cpp  BluetoothManager.h  CMakeLists.txt  CMakeLists.txt.user.4db9fcd  ClickNotier.h  ClickNotifier.cpp  bluetooth_page.qml  light_page.qml  main.cpp  main.qml  media_page.qml  music_page.qml  music_player.h  qml.qrc  setting_page.qml
HeadUnit_Project/HeadUnit/: CMakeLists.txt  CMakeLists.txt.user.4db9fcd  CMakeLists.txt.user.ef183d3  bluetooth_page.qml  bluetoothmanager.cpp  client.cpp  client.h  light_page.qml  main.cpp  main.qml  map_page.qml  media_contents.qrc  media_page.qml  media_page_youtube.qml  mirror_page.qml  mirror_provider.h  mirrorprovider.cpp  mirrorprovider.h  music_page.qml  music_player.h  qml.qrc  receiver.cpp  setting_page.qml  youtube_player.h
HeadUnit_Project/IC_TEST/: main.cpp  main.qml  qml.qrc  server.cpp  server.h
HeadUnit_Project/build-HeadUnit-Desktop_Qt_5_12_8_GCC_64bit-Debug/: CMakeCache.txt  HeadUnit  HeadUnit.cbp  Makefile  cmake_install.cmake
HeadUnit_Project/build-HeadUnit-Desktop_Qt_5_12_8_GCC_64bit-Debug/.cmake/api/v1/reply/: cache-v2-0d0f6f824dadc8d66fb5.json  cache-v2-ad4d3c0ecd77844b9e10.json  cache-v2-c9ee2141f92e7a0184cf.json  cmakeFiles-v1-473b46d6df7b565670cd.json  cmakeFiles-v1-7bca555db4ecda954e1e.json  codemodel-v2-a26cd35680746f55f3d1.json  index-2024-10-16T12-04-49-0115.json  index-2024-11-08T14-34-07-0552.json  index-2024-11-12T16-12-12-0650.json  target-HeadUnit-Debug-c7772b11820bec8db296.json  target-HeadUnit_autogen-Debug-d759f10e6bd8b99d8cb9.json
HeadUnit_Project/build-HeadUnit-Desktop_Qt_5_12_8_GCC_64bit-Debug/HeadUnit_autogen/: moc_predefs.h  mocs_compilation.cpp
HeadUnit_Project/build-HeadUnit-Desktop_Qt_5_12_8_GCC_64bit-Debug/HeadUnit_autogen/EWIEGA46WW/: moc_bluetoothmanager.cpp  moc_clicknotier.cpp  moc_client.cpp  moc_mirror_provider.cpp  moc_mirrorprovider.cpp  moc_receiver.cpp  moc_weather_provider.cpp  moc_youtube_player.cpp  qrc_qml.cpp
HeadUnit_Project/build-IC_TEST-Desktop-Debug/: IC_TEST  IC_TEST.cbp
HeadUnit_Project/build-IC_TEST-Desktop-Debug/.cmake/api/v1/reply/: cache-v2-390aba758633012ed738.json  cmakeFiles-v1-3af4c00cb6c554512aeb.json  codemodel-v2-bd6f769406f6414594e2.json  index-2024-10-30T21-57-24-0966.json  target-IC_TEST-Debug-3a0a4e63b4b08b49ba1a.json  target-IC_TEST_autogen-Debug-28f21560870423722e30.json
HeadUnit_Project/build-IC_TEST-Desktop-Debug/IC_TEST_autogen/EWIEGA46WW/: qrc_qml.cpp
HeadUnit_Project/build-Mirrorig-Desktop_Qt_5_12_8_GCC_64bit-Debug/: Mirrorig.cbp
IC_TEST/: CMakeLists.txt  CMakeLists.txt.autosave  CMakeLists.txt.user.0193f36  Clock.h  DateClock.h  Gauge.cpp  Gauge.h  Speed_Needle.qml  battery_gauge.cpp  battery_gauge.h  main.cpp  main.qml  receiver.h  rpm_gauge.cpp  rpm_gauge.h  speedProvider.h
TEST/: CMakeLists.txt  main.cpp  main.qml  qml.qrc  receiver.h
build-HeadUnit-Desktop_Qt_5_12_8_GCC_64bit-Debug/: CMakeCache.txt  HeadUnit  HeadUnit.cbp  Makefile  cmake_install.cmake
build-HeadUnit-Desktop_Qt_5_12_8_GCC_64bit-Debug/.cmake/api/v1/reply/: cache-v2-d1a7b21403df9fcf45dd.json  cmakeFiles-v1-ea53154e572c2d4784b9.json  codemodel-v2-01ed6aa0b760913cee67.json  index-2024-10-17T12-41-06-0478.json  target-HeadUnit-Debug-8c3830f666bc91d7c2e9.json  target-HeadUnit_autogen-Debug-240c71bc12d5a76b8475.json
build-HeadUnit-Desktop_Qt_5_12_8_GCC_64bit-Debug/HeadUnit_autogen/: moc_predefs.h  mocs_compilation.cpp
build-HeadUnit-Desktop_Qt_5_12_8_GCC_64bit-Debug/HeadUnit_autogen/EWIEGA46WW/: moc_BluetoothManager.cpp  moc_basic_func.cpp  moc_music_player.cpp  qrc_media_contents.cpp  qrc_qml.cpp
config/: vsomeip-client.json  vsomeip-server.json  vsomeip-service.json
meta-HU/recipes-bsp/bootfiles/: rpi-config_git.bbappend
meta-HU/recipes-core/images/: minam-image.bbappend
meta-HU/recipes-core/psplash/files/: change.py  framebuf.conf  psplash-raspberrypi-img.h
meta-HU/recipes-hu/hu/: hu.bb
meta-HU/recipes-ic/src/: ic.bb
meta-HU/recipes-piracer/src/: control.bb  piracer.bb
meta-HU/recipes-piracer/src/files/: control.py  piracer_py_v0.1.1.tar.xz
meta-HU/recipes-piracer/src/files/piracer_py_v0.1.1/piracer/: gamepads.py
meta-HU/recipes-weston/src/files/: application.sh
poky/: .gitignore
poky/HU/conf/: bblayers.conf  local.conf
poky/bitbake/lib/bb/pysh/: pyshtables.py
poky/meta-HU/classes/: minam-image.bbclass
poky/meta-HU/recipes-bsp/bootfiles/: rpi-config_git.bbappend
poky/meta-HU/recipes-client/src/: client.bb
poky/meta-HU/recipes-client/src/files/: client.service
poky/meta-HU/recipes-core/images/: minam-image.bbappend
poky/meta-HU/recipes-hu/hu/: hu.bb
poky/meta-HU/recipes-ic/src/: ic.bb
poky/meta-HU/recipes-piracer/src/: control.bb
poky/meta-HU/recipes-piracer/src/files/: control.py  piracer.service
poky/meta-HU/recipes-qt5/qt5/: qtbase_%.bbappend
poky/meta-HU/recipes-weston/src/: westo.bb
poky/meta-HU/recipes-weston/src/files/: app.service  application.sh  westo.service
poky/meta-poky/conf/: local.conf.sample
poky/meta-vsomeip/conf/: layer.conf
poky/meta-vsomeip/recipes-service/src/: vsomeip_service.bb
poky/meta/recipes-core/systemd/systemd-serialgetty/: serial-getty@.service
poky/meta/recipes-graphics/wayland/: weston_10.0.2.bb
poky/meta/recipes-graphics/wayland/weston-init/: .init.swp  weston.env  weston.ini  weston.service
poky/template/: bblayers.conf.sample  conf-notes.txt  local.conf.sample
src/: CMakeLists.txt  client.cpp
vsomeip_client/config/: vsomeip-client.json
vsomeip_client/src/: HelloWorldClient.cpp
vsomeip_service/src/: CMakeLists.txt  HelloWorldService.cpp
(+6 files in other folders)
